Remove auth-related stuff (login, logout, profile) - add routes and controllers for our other features

--- a/client/components/weather/weather.html
+++ b/client/components/weather/weather.html
@@ -1,9 +1,9 @@
 <section class="hero" layout="column" layout-align="center center">
 
   <div class="hero-logo">
-    <h1 class="md-headline">Pastoralist</h1>
+    <h1 class="md-headline">Angular-Express-Starter</h1>
     <div class="md-title">
-      A simple application
+      A simple and full-featured starting point for Angular+Express applications.
     </div>
   </div>
 
