--- a/client/styles.css
+++ b/client/styles.css
@@ -1,3 +1,35 @@
-.alerts {
+body {
+	background-color: #167678;
+}
+
+h1 {
+	color: #9FFFE1;
+	width: 210px;
+	margin: 0 auto;
+	padding: 5px;
+}
+
+.nav {
+	width: 210px;
+	margin: 0 auto;
+	padding-bottom: 5px;
+}
+
+.sent-alerts {
+	height: auto;
+	margin-bottom: 20px;
+}
+
+.alert-item {
 	display: block;
+}
+
+#alert-list li img {
+	padding-top: 5px;
+	height: 50px;
+}
+
+#messages {
+	width: 250px;
+	margin: 0 auto;
 }
